--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity
             android:name=".GameActivity"
+            android:noHistory="true"
             android:label="@string/title_activity_game"
             android:windowSoftInputMode="stateAlwaysVisible"
             android:parentActivityName=".MainMenuActivity" >
